--- a/locales/en.json
+++ b/locales/en.json
@@ -10,6 +10,7 @@
     "ENGLISH": "English",
     "SPANISH": "Spanish",
     "DEUTSCH": "Deutsch",
+    "FRENCH" : "French",
 
     "SLOGAN": "Smoke is the most complete jQuery Plugin and designed for use with Bootstrap 3",
     "DOWNLOAD": "Download",
