--- a/locales/es.json
+++ b/locales/es.json
@@ -10,6 +10,7 @@
     "ENGLISH": "Inglés",
     "SPANISH": "Español",
     "DEUTSCH": "Alemán",
+    "FRENCH" : "Francés",
 
     "SLOGAN": "Smoke es el Plugin Jquery mas completo y ligero diseñado para usarse en Bootstrap 3",
     "DOWNLOAD": "Descargar",
