Brazilian portuguese translation.

--- a/docs/locales/de.json
+++ b/docs/locales/de.json
@@ -11,6 +11,7 @@
     "SPANISH": "Spaans",
 	"DEUTSCH": "Deutsch",
     "FRENCH" : "Frans",
+	"BRAZILIANPORTUGUESE":"Brasilianisches Portugiesisch",
 
     "SLOGAN": "Smoke ist das vollständigste jQuery Plugin, erstellt für die Nutzung mit Bootstrap 3",
     "DOWNLOAD": "Download",
