--- a/docs/locales/es.json
+++ b/docs/locales/es.json
@@ -11,6 +11,7 @@
     "SPANISH": "Español",
     "DEUTSCH": "Alemán",
     "FRENCH" : "Francés",
+	"BRAZILIANPORTUGUESE":"Portugués Brasileño",
 
     "SLOGAN": "Smoke es el Plugin Jquery mas completo y ligero diseñado para usarse en Bootstrap 3",
     "DOWNLOAD": "Descargar",
