--- a/locales/en.json
+++ b/locales/en.json
@@ -11,6 +11,7 @@
     "SPANISH": "Spanish",
     "DEUTSCH": "Deutsch",
     "FRENCH" : "French",
+	"BRAZILIANPORTUGUESE":"Brazilian Portuguese",
 
     "SLOGAN": "Smoke is the most complete jQuery Plugin and designed for use with Bootstrap 3",
     "DOWNLOAD": "Download",
