Fix documentation typo

--- a/docs/locales/en.json
+++ b/docs/locales/en.json
@@ -23,7 +23,7 @@
 
     "DESIGNED": "Designed and developed with love by",
     "TRANSLATED": "Translated by",
-    "LICENSE": "Code and documentarion (c) Copyright 2015 Alfredo Barron. Code published under ",
+    "LICENSE": "Code and documentation (c) Copyright 2015 Alfredo Barron. Code published under ",
     "ISSUES": "Issues",
     "RELEASES": "Releases",
 
