Fix project typo

--- a/docs/locales/en.json
+++ b/docs/locales/en.json
@@ -32,7 +32,7 @@
 
     "GETTING-STARTED-DESC": "An overview of Smoke, how to download and use.",
 
-    "DOWNLOAD-DESC": "Download Smoke and add it to your proyect, It's simple and quick of use.",
+    "DOWNLOAD-DESC": "Download Smoke and add it to your project. It's simple and quick to use.",
 
     "INSTALL": "Install with",
 
