--- a/docs/locales/en.json
+++ b/docs/locales/en.json
@@ -56,13 +56,13 @@
 
     "INPUT-EMPTY": "Empty input",
     "INPUT-EMPTY-DESC": "To validate a field that is mandatory, you only have to add the <code>required</code> attribute within the <code>input</code> . The field types supported so far are <code>text</code>, <code>textarea</code>, <code>email</code>, <code>password</code>, <code>select</code>, <code>radio</code> and <code>checkbox</code>. The function used to validate is <span class = 'text-success'> smkValidate () </span>.",
-    "INPUT-EMPTY-NOTE": "It is necessary that the <code>input</code> to validate is inside a <code>div</code> with the <code>form-group</code> class",
+    "INPUT-EMPTY-NOTE": "It is necessary that the <code>input</code> to validate is inside a <code>div</code> with the <code>form-group</code> class.",
 
     "INPUT-EMAIL": "Email input ",
     "INPUT-EMAIL-DESC": "To validate an email account, the field must be of type <code>email</code> and add <code>required</code> attribute within the <code>input</code>.",
 
     "INPUT-ALPHANUMERIC": "Alphanumeric input ",
-    "INPUT-ALPHANUMERIC-DESC": "To validate a field that accepts only numbers and letters, the field must be of type text, add the required attribute within the input tag, likewise add the <code>smk-type</code> attribute and within this  the alphanumeric property.",
+    "INPUT-ALPHANUMERIC-DESC": "To validate a field that accepts only numbers and letters, the field must be of type <code>text</code>, add the <code>required</code> attribute within the input tag, likewise add the <code>smk-type</code> attribute and within this  the alphanumeric property.",
 
     "INPUT-NUMBER": "Number input",
     "INPUT-NUMBER-DESC": "To validate that a field only accepts numbers, the field must be of type <code>text</code>, add the <code>required</code> attribute in the <code>input</code> tag. likewise add the <code>smk-type</code>  attribute and within this, the <code>number</code> attribute.",
