--- a/docs/locales/de.json
+++ b/docs/locales/de.json
@@ -12,6 +12,7 @@
 	"DEUTSCH": "Deutsch",
     "FRENCH" : "Frans",
 	"BRAZILIANPORTUGUESE":"Brasilianisches Portugiesisch",
+    "ITALIAN" : "Italiaans",
 
     "SLOGAN": "Smoke ist das vollständigste jQuery Plugin, erstellt für die Nutzung mit Bootstrap 3",
     "DOWNLOAD": "Download",
