--- a/docs/locales/es.json
+++ b/docs/locales/es.json
@@ -12,6 +12,7 @@
     "DEUTSCH": "Alemán",
     "FRENCH" : "Francés",
 	"BRAZILIANPORTUGUESE":"Portugués Brasileño",
+    "ITALIAN" : "Italiano",
 
     "SLOGAN": "Smoke es el Plugin Jquery mas completo y ligero diseñado para usarse en Bootstrap 3",
     "DOWNLOAD": "Descargar",
