--- a/docs/locales/en.json
+++ b/docs/locales/en.json
@@ -12,6 +12,7 @@
     "DEUTSCH": "Deutsch",
     "FRENCH" : "French",
 	"BRAZILIANPORTUGUESE":"Brazilian Portuguese",
+    "ITALIAN" : "Italian",
 
     "SLOGAN": "Smoke is the most complete jQuery Plugin and designed for use with Bootstrap 3",
     "DOWNLOAD": "Download",
