--- a/locales/pt_br.json
+++ b/locales/pt_br.json
@@ -12,6 +12,7 @@
     "DEUTSCH": "Alemão",
     "FRENCH" : "Francês",
 	"BRAZILIANPORTUGUESE":"Português Brasileiro",
+    "ITALIAN" : "Italiano",
 
 	"SLOGAN": "Smoke é o Plugin jQuery mais completo e elaborado para se utilizar com Bootstrap 3",
     "DOWNLOAD": "Baixar",
